// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds thread views blocks ancestors by actor takedown 1`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.getPostThread#notFoundPost",
    "notFound": true,
    "uri": "record(4)",
  },
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
        "root": {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": {
      "repost": "record(5)",
    },
  },
  "replies": [],
}
`;

exports[`pds thread views blocks ancestors by record takedown 1`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.getPostThread#notFoundPost",
    "notFound": true,
    "uri": "record(4)",
  },
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
        "root": {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": {
      "repost": "record(5)",
    },
  },
  "replies": [],
}
`;

exports[`pds thread views blocks replies by actor takedown 1`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": {
      "upvote": "record(3)",
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "embed": {
          "$type": "app.bsky.embed.images#presented",
          "images": [
            {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": {
                  "cid": "cids(3)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(4)",
        "viewer": {},
      },
      "replies": [
        {
          "$type": "app.bsky.feed.getPostThread#threadViewPost",
          "post": {
            "author": {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "declaration": {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "viewer": {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "cid": "cids(4)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": {
                "parent": {
                  "cid": "cids(2)",
                  "uri": "record(4)",
                },
                "root": {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "upvoteCount": 0,
            "uri": "record(5)",
            "viewer": {
              "repost": "record(6)",
            },
          },
          "replies": [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread views blocks replies by record takedown 1`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": {
      "upvote": "record(3)",
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "embed": {
          "$type": "app.bsky.embed.images#presented",
          "images": [
            {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": {
                  "cid": "cids(3)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(4)",
        "viewer": {},
      },
      "replies": [],
    },
  ],
}
`;

exports[`pds thread views fetches ancestors 1`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.getPostThread#threadViewPost",
    "parent": {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": {
            "followedBy": "record(2)",
            "following": "record(1)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(3)",
        "viewer": {
          "upvote": "record(6)",
        },
      },
      "replies": [],
    },
    "post": {
      "author": {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": {
          "muted": false,
        },
      },
      "cid": "cids(3)",
      "downvoteCount": 0,
      "embed": {
        "$type": "app.bsky.embed.images#presented",
        "images": [
          {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.images",
          "images": [
            {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": {
                "cid": "cids(4)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "reply": {
          "parent": {
            "cid": "cids(2)",
            "uri": "record(3)",
          },
          "root": {
            "cid": "cids(2)",
            "uri": "record(3)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(4)",
      "viewer": {},
    },
    "replies": [],
  },
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
        "root": {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": {
      "repost": "record(5)",
    },
  },
  "replies": [],
}
`;

exports[`pds thread views fetches deep post thread 1`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": {
      "upvote": "record(3)",
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "handle": "carol.test",
          "viewer": {
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(4)",
        "viewer": {},
      },
      "replies": [],
    },
    {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 0,
        "embed": {
          "$type": "app.bsky.embed.images#presented",
          "images": [
            {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": {
                  "cid": "cids(4)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(6)",
        "viewer": {},
      },
      "replies": [
        {
          "$type": "app.bsky.feed.getPostThread#threadViewPost",
          "post": {
            "author": {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "declaration": {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "viewer": {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "cid": "cids(5)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": {
                "parent": {
                  "cid": "cids(3)",
                  "uri": "record(6)",
                },
                "root": {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "upvoteCount": 0,
            "uri": "record(7)",
            "viewer": {
              "repost": "record(8)",
            },
          },
          "replies": [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread views fetches shallow post thread 1`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": {
      "upvote": "record(3)",
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "handle": "carol.test",
          "viewer": {
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(4)",
        "viewer": {},
      },
    },
    {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 0,
        "embed": {
          "$type": "app.bsky.embed.images#presented",
          "images": [
            {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": {
                  "cid": "cids(4)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(6)",
        "viewer": {},
      },
    },
  ],
}
`;

exports[`pds thread views handles deleted posts correctly 1`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 1,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": {},
  },
  "replies": [
    {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "Reply",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(3)",
        "viewer": {},
      },
      "replies": [
        {
          "$type": "app.bsky.feed.getPostThread#threadViewPost",
          "post": {
            "author": {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "declaration": {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "viewer": {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "cid": "cids(3)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": {
                "parent": {
                  "cid": "cids(2)",
                  "uri": "record(3)",
                },
                "root": {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "Reply reply",
            },
            "replyCount": 0,
            "repostCount": 0,
            "upvoteCount": 0,
            "uri": "record(4)",
            "viewer": {},
          },
          "replies": [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread views handles deleted posts correctly 2`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": {},
  },
  "replies": [],
}
`;

exports[`pds thread views handles deleted posts correctly 3`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "parent": {
    "$type": "app.bsky.feed.getPostThread#notFoundPost",
    "notFound": true,
    "uri": "record(4)",
  },
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
        "root": {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
      },
      "text": "Reply reply",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": {},
  },
  "replies": [],
}
`;

exports[`pds thread views includes the muted status of post authors. 1`] = `
{
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": {
    "author": {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": true,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": {
      "upvote": "record(3)",
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "handle": "carol.test",
          "viewer": {
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(4)",
        "viewer": {},
      },
      "replies": [],
    },
    {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": {
        "author": {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 0,
        "embed": {
          "$type": "app.bsky.embed.images#presented",
          "images": [
            {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": {
                  "cid": "cids(4)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(6)",
        "viewer": {},
      },
      "replies": [
        {
          "$type": "app.bsky.feed.getPostThread#threadViewPost",
          "post": {
            "author": {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "declaration": {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "viewer": {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": true,
              },
            },
            "cid": "cids(5)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": {
                "parent": {
                  "cid": "cids(3)",
                  "uri": "record(6)",
                },
                "root": {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "upvoteCount": 0,
            "uri": "record(7)",
            "viewer": {
              "repost": "record(8)",
            },
          },
          "replies": [],
        },
      ],
    },
  ],
}
`;
